maybe fix weird virtual keyboard bounce on safari mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,8 @@
 /* Base */
 
 body {
+    position: absolute;
+    height: 100%;
     margin: 0 auto;
     width: 100%;
     color: white;
@@ -40,7 +42,7 @@ main {
 }
 
 .cmd-clipboard {
-    width: 100%!important;
+    width: 100% !important;
 }
 
 /* General styles */
